# CSA-lab4

./: .gitignore  README.md  pyproject.toml  run.yaml
.github/workflows/: lint.yaml  pipeline.yaml
schema/: CISC.drawio
src/: Config.py  Machine.py  Translator.py  Viewer.py
test-examples/: test1.fth  test2.fth  test3.fth
v2/: Config.py  Machine.py  Translator.py  Viewer.py
