[project]
name = "reshes-csa-lab-4"
version = "0.1.0"
description = "ITMO System and Applied Software CSA Lab 4"
authors = [
  {name = "NF-coder", email = "reshes@rambler.ru"}
]
requires-python = ">=3.12"
dependencies = [
  "ruff == 0.1.3"
]
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src/*.py"]